--- a/index.html
+++ b/index.html
@@ -67,11 +67,9 @@
                     <li> Advised by Professor Byung‑Gon Chun. </li>
                     <li> Designed and implemented an elastic distributed DNN training framework that auto‑scales
                          and provides fault‑tolerance. Evaluated the systemon up to 256 transient cloud GPUs end to end,
-                         scaling in/out the training job automatically and dynamically. The manuscript is in preparation
-                         for submission to NeurIPS 2021. </li>
+                         scaling in/out the training job automatically and dynamically. </li>
                     <li> Performed research on resolving the CPU bottleneck of DNN input pipeline as a coauthor,
-                         providing theoretical analysis on the impact of reusingdata in data augmentation for DNN training.
-                         The manuscript is under review at ATC 2021. </li>
+                         providing theoretical analysis on the impact of reusingdata in data augmentation for DNN training. </li>
                 </ul>
 
                 <h2>Software Platform Lab <span>Jan. 2019 - Aug. 2019</span></h2>
@@ -83,6 +81,16 @@
                 </ul>
             </dd>
 
+            <dd class="clear"></dd>
+
+            <dt>Publications</dt>
+            <dd class="rule"/>
+            <dd>
+                <ul>
+                    <li> <span> Refurbish Your Training Data: Reusing Partially Augmented Samples for Faster Deep Neural Network Training </span>,
+                        Gyewon Lee, Irene Lee, Hyeonmin Ha, <u>Kyunggeun Lee</u>, Hwarim Hyun, Ahnjae Shin, Byung-Gon Chun, USENIX ATC 2021 </li>
+                </ul>
+            </dd>
             <dd class="clear"></dd>
 
             <dt>Honors & Awards</dt>
